seccion cinco lista

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -99,3 +99,32 @@ header {
 		width: 100%;
 	}
 }
+
+.section-five {
+	position: relative;
+	top: -43vh;
+	height: 120vh;
+	background: url('../../dist/img/bg2.jpg');
+	background-size: cover;
+	background-position: top;
+	background-repeat: no-repeat;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	form {
+		span {
+			color: white;
+			font-size: 250%;
+			font-weight: bold;
+		}
+		.input-field {
+			margin-top: 4%;
+		}
+		.icon {
+			background: $verde;
+			color: white;
+			font-weight: bold;
+			padding: 1.5% 0;
+		}
+	}
+}
