--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -128,3 +128,54 @@ header {
 		}
 	}
 }
+
+.download {
+	position: relative;
+	top: -43vh;
+	background: $fondo-section;
+}
+
+.section-download {
+	padding: 7%;
+	span {
+		font-size: 190%;
+		font-weight: bold;
+	}
+	p {
+		text-transform: uppercase;
+		font-size: 120%;
+		font-weight: 400;
+		line-height: 200%;
+		margin-top: 1%;
+	}
+	.boton {
+		padding: 1% 3%;
+		.btn {
+			padding: 3% 8%;
+			font-size: 140%;
+		}
+	}
+	.btn-apple {
+		float: right;
+	}
+}
+
+.section-footer {
+	position: relative;
+	top: -43vh;
+	.cont-footer {
+		padding: 3% 9%;
+		font-size: 145%;
+		font-weight: bold;
+		p {
+			margin: 4% 0;
+			span {
+				color: $verde;
+			}
+		}
+	}
+}
+
+.footer {
+	height: -50vh;
+}
