se usa parallax en el header

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -24,6 +24,7 @@ header {
 	background-size: cover;
 	backgroun-position: top;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	position: relative;
 	top: -16vh;
 	width: 100%;
